--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pdf-lib": "^1.17.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
