--- a/env.example
+++ b/env.example
@@ -23,6 +23,17 @@ GOOGLE_APPLICATION_CREDENTIALS_JSON=
 # Optional: Logging Level (ERROR, WARN, INFO, DEBUG)
 LOG_LEVEL=INFO
 
+# SMTP Email Configuration (for email verification and notifications)
+# If not set, emails will be logged to console in development
+# For Gmail: SMTP_HOST=smtp.gmail.com, SMTP_PORT=587, use App Password
+# For SendGrid: SMTP_HOST=smtp.sendgrid.net, SMTP_PORT=587
+# For Mailgun: SMTP_HOST=smtp.mailgun.org, SMTP_PORT=587
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=
+
 # Node Environment (usually set automatically)
 NODE_ENV=development
 
