--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^133.0.0",
     "mongodb": "^6.3.0",
     "next": "16.1.0",
+    "nodemailer": "^7.0.7",
     "next-auth": "^4.24.10",
     "pdf-lib": "^1.17.1",
     "react": "19.2.3",
